# quill-widgets

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-assets.yml  ci-code.yml
examples/: diag.rs
src/: lib.rs
src/widgets/: mod.rs
src/widgets/diag/: entity.rs  fps.rs  mem.rs  mod.rs  update.rs  ver.rs
src/widgets/ecs/: mod.rs  state.rs
