[package]
name = "dead-money-quill-widgets"
description = "A collection of widgets that extend the quill UI library for Bevy."
version = "0.1.0"
authors = ["Dead Money LLC <brandon@deadmoney.gg>"]
homepage = "https://deadmoney.gg/"
repository = ""
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]

[lib]
name = "dead_money_quill_widgets"
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
## Bevy
bevy = "0.14"

## Quill
bevy_quill = { git = "https://github.com/dead-money/quill.git" }
bevy_quill_obsidian = { git = "https://github.com/dead-money/quill.git", package = "bevy_quill_obsidian" }
bevy_mod_stylebuilder = { git = "https://github.com/dead-money/quill.git", package = "bevy_mod_stylebuilder" }

## Dead Money
dead-money-bevy-ext = { path = "../bevy-ext" }

## OS
version = "3.0"
memory-stats = "1.1"

[dev-dependencies]
bevy_mod_picking = "0.20"
